style: change task into plan

--- a/app/views/pages/dashboard/index.ejs
+++ b/app/views/pages/dashboard/index.ejs
@@ -18,8 +18,8 @@
               <h2 class="text-xl text-center">27 November 2023</h2>
             </div>
             <div class="rounded-box glass p-5 ">
-              <!-- <h2 class="text-xl text-center">Click <a href="/dashboard/plan" class="font-semibold">Start Planning</a> to add task</h2> -->
-              <h2 class="text-xl font-semibold text-center">Upcoming Tasks</h2>
+              <!-- <h2 class="text-xl text-center">Click <a href="/dashboard/plan" class="font-semibold">Start Planning</a> to make new plan</h2> -->
+              <h2 class="text-xl font-semibold text-center">Upcoming Plan</h2>
               <ol class="menu rounded-box">
                 <li class="text-lg"><a href="">
                   1. Make Life Plan website
