--- a/app/views/pages/dashboard/history.ejs
+++ b/app/views/pages/dashboard/history.ejs
@@ -13,7 +13,7 @@
       <div class="hero-content flex-row px-12 py-16">
         <div class="card shrink-0 shadow-2xl bg-white">
           <div class="card-body py-6">
-            <h2 class="text-2xl text-center col-span-2">Task History</h2>
+            <h2 class="text-2xl text-center col-span-2">Plan History</h2>
             <div class="flex">
               <ul class="menu w-80">
                 <li>
