--- a/app/views/pages/dashboard/plan-detail.ejs
+++ b/app/views/pages/dashboard/plan-detail.ejs
@@ -56,7 +56,14 @@
                     <span class="label-text">Deadline</span>
                   </label>
                   <div class="px-4 py-3 text-base leading-6 border border-gray-300 rounded-lg">
-                    <p><%= plan.deadline %></p>
+                    <% 
+                      const deadline = new Date(plan.deadline)
+                      const deadlineDate = deadline.getDate()
+                      const deadlineMonth = deadline.toLocaleString('default', { month: 'long' })
+                      const deadlineYear = deadline.getFullYear()
+                      const deadlineString = deadlineDate + ' ' + deadlineMonth + ' ' + deadlineYear
+                    %>
+                    <p><%= deadlineString %></p>
                   </div>
                 </div>
               </div>
