--- a/app/views/pages/dashboard/plan.ejs
+++ b/app/views/pages/dashboard/plan.ejs
@@ -13,7 +13,7 @@
       <div class="hero-content flex-row px-12 py-16">
         <div class="card shrink-0 shadow-2xl bg-white">
           <% if (flash) { %>
-            <%- include('../partials/flash.ejs', {flash: flash}) %>
+            <%- include('../../partials/flash.ejs', {flash: flash}) %>
           <% } %>
           <form class="card-body py-6 w-[38rem]" method="post">
             <h2 class="text-2xl text-center col-span-2 pb-2">Create New Plan</h2>
