--- a/app/views/pages/dashboard/history.ejs
+++ b/app/views/pages/dashboard/history.ejs
@@ -15,29 +15,24 @@
           <div class="card-body py-6">
             <h2 class="text-2xl text-center col-span-2">Plan History</h2>
             <div class="flex">
-              <ul class="menu w-80">
-                <li>
-                  <h2 class="menu-title">27 November 2023</h2>
-                  <ul>
-                    <li><a>Fill internship form</a></li>
-                    <li><a>Research for thesis</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <h2 class="menu-title">26 November 2023</h2>
-                  <ul>
-                    <li><a>Buy grocery</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <h2 class="menu-title">25 November 2023</h2>
-                  <ul>
-                    <li><a>Make Life Plan website</a></li>
-                    <li><a>Make a reservation for karaoke date</a></li>
-                    <li><a>Wash Oyen and Cimi</a></li>
-                  </ul>
-                </li>
-              </ul>
+              <% if (plans.length===0) { %>
+                <h2 class="text-xl text-center">Click <a href="/dashboard/plan" class="font-semibold">Start Planning</a> to start making a plan</h2>
+              <% } else { %>
+                <ul class="menu w-80">
+                  <% 
+                    let pi = 0
+                    plansDate.forEach(pDate => { 
+                  %>
+                    <h2 class="menu-title"><%= pDate.dateFormatted %></h2>
+                    <ul>
+                      <% for (let i = 0; i < pDate.count; i++ ) { %>
+                        <li><a href="/dashboard/plan/<%= plans[pi].id %>"><%= plans[pi].title %></a></li>
+                        <% pi++ %>
+                      <% } %>
+                    </ul>
+                  <% }) %>
+                </ul>
+              <% } %>
             </div>
           </div>
         </div>
