--- a/app/views/pages/dashboard/index.ejs
+++ b/app/views/pages/dashboard/index.ejs
@@ -15,7 +15,13 @@
           <div class="flex flex-col gap-6 text-white">
             <div class="">
               <h1 class="grow text-4xl font-bold text-center">Welcome <%= user.name %>!</h1>
-              <h2 class="text-xl text-center">27 November 2023</h2>
+              <% 
+                const dDate = date.getDate()
+                const dMonth = date.toLocaleString('default', { month: 'long' })
+                const dYear = date.getFullYear()
+                const dString = dDate + ' ' + dMonth + ' ' + dYear
+              %>
+              <h2 class="text-xl text-center"><%= dString %></h2>
             </div>
             <div class="rounded-box glass p-5 ">
               <% if (plans.length === 0) { %>
