--- a/app/views/pages/dashboard/plan-detail.ejs
+++ b/app/views/pages/dashboard/plan-detail.ejs
@@ -13,7 +13,26 @@
       <div class="hero-content flex-row px-12 py-16">
         <div class="card shrink-0 shadow-2xl bg-white">
           <div class="card-body py-6 w-[38rem]">
-            <h2 class="text-2xl text-center col-span-2">Plan Detail</h2>
+            <div class="flex align-middle">
+              <a href="javascript:history.back()" class="my-auto">
+                <svg height="24" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="24"
+                  xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <polygon points="352,128.4 319.7,96 160,256 160,256 160,256 319.7,416 352,383.6 224.7,256 " />
+                </svg>
+              </a>
+
+              <h2 class="text-2xl text-center grow">Plan Detail</h2>
+
+              <a href="/dashboard/plan/<%= plan.id  %>/edit" class="my-auto">
+                <svg fill="none" height="24" stroke="currentColor"
+                  stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7" />
+                  <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z" />
+                </svg>
+              </a>
+            </div>
+
             <div class="grid grid-cols-2 gap-6">
               <div class="grid">
                 <!-- Title -->
