--- a/app/views/pages/dashboard/schedule.ejs
+++ b/app/views/pages/dashboard/schedule.ejs
@@ -2,103 +2,36 @@
 <html lang="en" data-theme="lifeplan">
 <head>
   <%- include('../../partials/head'); %>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var calendarEl = document.getElementById('calendar')
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth',
+        contentHeight: 'auto',
+        
+        headerToolbar: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        },
+
+        events: parsed_plans
+      })
+      calendar.render()
+    })
+
+    var parsed_plans = JSON.parse('<%- JSON.stringify(plans) %>')
+  </script>
 </head>
 <body>
-
   <%- include('../../partials/header-login.ejs', {user: user}) %>
 
   <main>
     <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
-      <div class="hero-overlay opacity-25 bg-no-repeat bg-center bg-cover" style="background-image: url(/images/dashboard-bg.png);"></div>
-      <div class="hero-content justify-center p-12">
-        
-        <!-- <div
-          class='flex bg-white shadow-md justify-start md:justify-center rounded-lg overflow-x-scroll mx-auto py-4 px-2  md:mx-12'>
-      
-          <div
-            class='flex group hover:bg-purple-500 hover:shadow-lg hover-dark-shadow rounded-lg mx-1 transition-all duration-300 cursor-pointer justify-center w-16'>
-            <div class='flex items-center px-4 py-4'>
-              <div class='text-center'>
-                <p class='text-gray-900 group-hover:text-gray-100 text-sm transition-all duration-300'> Sun </p>
-                <p class='text-gray-900 group-hover:text-gray-100 mt-3 group-hover:font-bold transition-all duration-300'> 11
-                </p>
-              </div>
-            </div>
-          </div>
-      
-          <div
-            class='flex group hover:bg-purple-500 hover:shadow-lg hover-dark-shadow rounded-lg mx-1 transition-all duration-300 cursor-pointer justify-center  w-16'>
-            <div class='flex items-center px-4 py-4'>
-              <div class='text-center'>
-                <p class='text-gray-900 group-hover:text-gray-100 text-sm transition-all duration-300'> Mon </p>
-                <p class='text-gray-900 group-hover:text-gray-100 mt-3 group-hover:font-bold transition-all duration-300'> 12
-                </p>
-              </div>
-            </div>
-          </div>
-      
-          <div
-            class='flex group hover:bg-purple-500 hover:shadow-lg hover-dark-shadow rounded-lg mx-1 transition-all duration-300 cursor-pointer justify-center  w-16'>
-            <div class='flex items-center px-4 py-4'>
-              <div class='text-center'>
-                <p class='text-gray-900 group-hover:text-gray-100 text-sm transition-all duration-300'> Tue </p>
-                <p class='text-gray-900 group-hover:text-gray-100 mt-3 group-hover:font-bold transition-all duration-300'> 13
-                </p>
-              </div>
-            </div>
-          </div>
-      
-          <div
-            class='flex group bg-purple-600 shadow-lg dark-shadow rounded-lg mx-1 cursor-pointer justify-center relative  w-16'>
-            <span class="flex h-3 w-3 absolute -top-1 -right-1">
-              <span
-                class="animate-ping absolute group-hover:opacity-75 opacity-0 inline-flex h-full w-full rounded-full bg-purple-400 "></span>
-              <span class="relative inline-flex rounded-full h-3 w-3 bg-purple-100"></span>
-            </span>
-            <div class='flex items-center px-4 py-4'>
-              <div class='text-center'>
-                <p class='text-gray-100 text-sm'> Wed </p>
-                <p class='text-gray-100  mt-3 font-bold'> 14 </p>
-              </div>
-            </div>
-          </div>
-      
-          <div
-            class='flex group hover:bg-purple-500 hover:shadow-lg hover-dark-shadow rounded-lg mx-1 transition-all duration-300 cursor-pointer justify-center w-16'>
-            <div class='flex items-center px-4 py-4'>
-              <div class='text-center'>
-                <p class='text-gray-900 group-hover:text-gray-100 text-sm transition-all duration-300'> Thu </p>
-                <p class='text-gray-900 group-hover:text-gray-100 mt-3 group-hover:font-bold transition-all duration-300'> 15
-                </p>
-              </div>
-            </div>
-          </div>
-      
-          <div
-            class='flex group hover:bg-purple-500 hover:shadow-lg hover-dark-shadow rounded-lg mx-1 transition-all duration-300 cursor-pointer justify-center  w-16'>
-            <div class='flex items-center px-4 py-4'>
-              <div class='text-center'>
-                <p class='text-gray-900 group-hover:text-gray-100 text-sm transition-all duration-300'> Fri </p>
-                <p class='text-gray-900 group-hover:text-gray-100 mt-3 group-hover:font-bold transition-all duration-300'> 16
-                </p>
-              </div>
-            </div>
-          </div>
-      
-          <div
-            class='flex group hover:bg-purple-500 hover:shadow-lg hover-dark-shadow rounded-lg mx-1 transition-all duration-300 cursor-pointer justify-center w-16'>
-            <div class='flex items-center px-4 py-4'>
-              <div class='text-center'>
-                <p class='text-gray-900 group-hover:text-gray-100 text-sm transition-all duration-300'> Sat </p>
-                <p class='text-gray-900 group-hover:text-gray-100 mt-3 group-hover:font-bold transition-all duration-300'> 17
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <%- include('../../partials/calendar.ejs') %>
-
+      <div class="hero-overlay opacity-10 bg-no-repeat bg-center bg-cover" style="background-image: url(/images/dashboard-bg.png);"></div>
+      <div class="hero-content justify-center py-6 px-24">
+        <div id="calendar" class="w-full"></div>
       </div>
     </div>
   </main>
