feat: add fake ads for free role

--- a/app/views/pages/dashboard/package.ejs
+++ b/app/views/pages/dashboard/package.ejs
@@ -78,8 +78,7 @@
                         <span class="text-5xl font-bold tracking-tight text-gray-900">50.000</span>
                         <span class="text-sm font-semibold leading-6 tracking-wide text-gray-600">/month</span>
                       </p>
-                      <a href="https://shopee.co.id/shopee"
-                        class="mt-6 w-full btn btn-primary btn-disabled">Active</a>
+                      <a class="mt-6 w-full btn btn-primary btn-disabled">Active</a>
                     </div>
                   </div>
                 </div>
