--- a/app/views/pages/dashboard/index.ejs
+++ b/app/views/pages/dashboard/index.ejs
@@ -11,9 +11,20 @@
     <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
       <div class="hero-overlay opacity-25 bg-top bg-cover bg-fixed" style="background-image: url(/images/dashboard-bg.png);"></div>
       <div class="hero-content justify-center py-10">
+
+        <% if (user.role === 'free') { %>
+          <div class="absolute left-0 w-1/6 top-auto bg-white text-center p-2">
+            <%- include('../../partials/ads/side-2.ejs') %>
+          </div>
+
+          <div class="absolute right-0 w-44 top-auto">
+            <%- include('../../partials/ads/side.ejs') %>
+          </div>
+        <% } %>
+        
         <div class="grid grid-cols-2 place-items-center gap-6">
           <div class="flex flex-col gap-6 text-white">
-            <div class="">
+            <div>
               <h1 class="grow text-4xl font-bold text-center">Welcome <%= user.name %>!</h1>
               <% 
                 const dDate = date.getDate()
