--- a/app/views/pages/dashboard/schedule.ejs
+++ b/app/views/pages/dashboard/schedule.ejs
@@ -30,7 +30,23 @@
   <main>
     <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
       <div class="hero-overlay opacity-10 bg-no-repeat bg-center bg-cover" style="background-image: url(/images/dashboard-bg.png);"></div>
-      <div class="hero-content justify-center py-6 px-24">
+      
+      <% if (user.role==='free' ) { %>
+        <div class="hero-content justify-center py-2 px-24 flex-col">
+      <% } else { %>
+        <div class="hero-content justify-center py-6 px-24 flex-col">
+      <% } %>
+        
+        <% if (user.role==='free' ) { %>
+          <div class="">
+            <%- include('../../partials/ads/top.ejs') %>
+          </div>
+          
+          <div class="order-last">
+            <%- include('../../partials/ads/top-2.ejs') %>
+          </div>
+        <% } %>
+
         <div id="calendar" class="w-full"></div>
       </div>
     </div>
