--- a/app/views/partials/ads/top.ejs
+++ b/app/views/partials/ads/top.ejs
@@ -1,1 +1,1 @@
-<img src="https://cdnstatic.detik.com/live/2023/11/event/yamaha/231112-jakarta-728x90.gif" width="728" height="90" alt="yamaha">
+<a href="https://www.detik.com/classyyamahayouthfestival" target="_blank"><img src="https://cdnstatic.detik.com/live/2023/11/event/yamaha/231112-jakarta-728x90.gif" width="728" height="90" alt="yamaha"></a>
