--- a/app/views/pages/dashboard/index.ejs
+++ b/app/views/pages/dashboard/index.ejs
@@ -10,7 +10,15 @@
   <main>
     <div class="hero min-h-[calc(100vh-4rem)] bg-gradient-to-r from-primary to-secondary">
       <div class="hero-overlay opacity-25 bg-top bg-cover bg-fixed" style="background-image: url(/images/dashboard-bg.png);"></div>
-      <div class="hero-content justify-center py-10">
+      
+      <% if (flash) { %>
+        <div class="hero-content justify-center py-10 pt-6 flex-col">
+          <div>
+            <%- include('../../partials/flash.ejs', {flash: flash}) %>
+          </div>
+      <% } else { %>
+        <div class="hero-content justify-center py-10">
+      <% } %>
 
         <% if (user.role === 'free') { %>
           <div class="absolute left-0 w-1/6 top-auto bg-white text-center p-2">
@@ -21,62 +29,64 @@
             <%- include('../../partials/ads/side.ejs') %>
           </div>
         <% } %>
-        
-        <div class="grid grid-cols-2 place-items-center gap-6">
-          <div class="flex flex-col gap-6 text-white">
-            <div>
-              <h1 class="grow text-4xl font-bold text-center">Welcome <%= user.name %>!</h1>
-              <% 
-                const dDate = date.getDate()
-                const dMonth = date.toLocaleString('default', { month: 'long' })
-                const dYear = date.getFullYear()
-                const dString = dDate + ' ' + dMonth + ' ' + dYear
-              %>
-              <h2 class="text-xl text-center"><%= dString %></h2>
-            </div>
-            <div class="rounded-box glass p-5 ">
-              <% if (plans.length === 0) { %>
-                <h2 class="text-xl text-center">Click <a href="/dashboard/plan" class="font-semibold">Start Planning</a> to make new plan</h2>
-              <% } else { %>
-                <h2 class="text-xl font-semibold text-center">Upcoming Plan</h2>
-                <ol class="menu rounded-box">
-                  <% for (let i = 0; i < plans.length; i++) { %>
-                    <li class="text-lg"><a href="/dashboard/plan/<%= plans[i].id %>">
-                      <%= i+1 %>. <%= plans[i].title %>
-                    </a></li>
-                  <% } %>
-                </ol>
-              <% } %>
-            </div>
-          </div>
 
-          <div class="grid grid-cols-2 gap-4">
-            <% cards = [
-              {
-                link: '/dashboard/plan',
-                image: '/images/planning.png',
-                title: 'Start Planning'
-              },
-              {
-                link: '/dashboard/schedule',
-                image: '/images/schedule.png',
-                title: 'Schedule'
-              },
-              {
-                link: '/dashboard/history',
-                image: '/images/history.png',
-                title: 'History'
-              },
-              {
-                link: '/dashboard/package',
-                image: '/images/package.png',
-                title: 'My Package'
-              }
-            ] %>
+        <div>
+          <div class="grid grid-cols-2 place-items-center gap-6">
+            <div class="flex flex-col gap-6 text-white">
+              <div>
+                <h1 class="grow text-4xl font-bold text-center">Welcome <%= user.name %>!</h1>
+                <% 
+                  const dDate = date.getDate()
+                  const dMonth = date.toLocaleString('default', { month: 'long' })
+                  const dYear = date.getFullYear()
+                  const dString = dDate + ' ' + dMonth + ' ' + dYear
+                %>
+                <h2 class="text-xl text-center"><%= dString %></h2>
+              </div>
+              <div class="rounded-box glass p-5 ">
+                <% if (plans.length === 0) { %>
+                  <h2 class="text-xl text-center">Click <a href="/dashboard/plan" class="font-semibold">Start Planning</a> to make new plan</h2>
+                <% } else { %>
+                  <h2 class="text-xl font-semibold text-center">Upcoming Plan</h2>
+                  <ol class="menu rounded-box">
+                    <% for (let i = 0; i < plans.length; i++) { %>
+                      <li class="text-lg"><a href="/dashboard/plan/<%= plans[i].id %>">
+                        <%= i+1 %>. <%= plans[i].title %>
+                      </a></li>
+                    <% } %>
+                  </ol>
+                <% } %>
+              </div>
+            </div>
 
-            <% cards.forEach(card => { %>
-              <%- include('../../partials/card-link.ejs', {card: card}) %>
-            <% }) %>
+            <div class="grid grid-cols-2 gap-4">
+              <% cards = [
+                {
+                  link: '/dashboard/plan',
+                  image: '/images/planning.png',
+                  title: 'Start Planning'
+                },
+                {
+                  link: '/dashboard/schedule',
+                  image: '/images/schedule.png',
+                  title: 'Schedule'
+                },
+                {
+                  link: '/dashboard/history',
+                  image: '/images/history.png',
+                  title: 'History'
+                },
+                {
+                  link: '/dashboard/package',
+                  image: '/images/package.png',
+                  title: 'My Package'
+                }
+              ] %>
+
+              <% cards.forEach(card => { %>
+                <%- include('../../partials/card-link.ejs', {card: card}) %>
+              <% }) %>
+            </div>
           </div>
         </div>
       </div>
