--- a/app/views/partials/flash.ejs
+++ b/app/views/partials/flash.ejs
@@ -1,4 +1,8 @@
-<div role="alert" class="alert alert-<%= flash.type %> rounded-b-none">
+<% if (!flash.shape) { %>
+  <div role="alert" class="alert alert-<%= flash.type %> rounded-b-none">
+<% } else { %>
+  <div role="alert" class="alert alert-<%= flash.type %>">
+<% } %>
   
   <% if (flash.type === "warning") { %>
     <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
